syntax = "proto3";

package calculator;
option java_package = "io.protocol.grpc09";
option java_multiple_files = true;

message MaxRequest{
  double number = 1;
}

message MaxResponse{
  double max = 1;
}

