syntax="proto3";

package calculator;

option java_multiple_files=true;
option java_package="io.protocol.grpc09";

message PrimeRequest{
  int32 number=1;

}

message PrimeResponse{
 int32  primeFactor=1;
}
