syntax = "proto3";


package calculator;
option java_package = "io.protocol.grpc11";
option java_multiple_files = true;

message SqrtRequest{
  double number = 1;
}

message SqrtResponse{
  double value = 1;
}
